--- a/rpt/MOH717_Monthly_Workload_Report_for_Hospitals_page2.jrxml
+++ b/rpt/MOH717_Monthly_Workload_Report_for_Hospitals_page2.jrxml
@@ -329,7 +329,7 @@ FROM (
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Arial" size="10" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
+					<font fontName="DejaVuSans" size="10" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA["MOH 717"]]></textFieldExpression>
 			</textField>
