--- a/rpt/hmis108_operations.jrxml
+++ b/rpt/hmis108_operations.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.15.0.final using JasperReports Library version 6.15.0-dd49bfb94918336b8321d5507193f0169ead4e95  -->
+<!-- Created with Jaspersoft Studio version 6.16.0.final utlizzo versione della libreria JasperReports6.16.0-48579d909b7943b64690c65c71e07e0b80981928  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="hmis108_operations" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="30" rightMargin="30" topMargin="20" bottomMargin="20" resourceBundle="hmis108_operations" whenResourceMissingType="Key" uuid="d81c1cfa-2539-4595-a35b-4561a72eec6b">
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
@@ -22,6 +22,8 @@ from (
     where a.ADM_ID = opr.OPER_ADMISSION_ID
     and opr.OPER_ID = o.OPE_ID_A
     and o.OPE_OCL_ID_A = ot.OCL_ID_A
+    and year(opr.OPER_OPDATE) = $P{year}
+	and month(opr.OPER_OPDATE) = $P{month}
 ) alldata
 group by opType, opDesc]]>
 	</queryString>
